Remove debuggers, beign fixing event index item image stretching

--- a/app/assets/stylesheets/components/_events_index_item.scss
+++ b/app/assets/stylesheets/components/_events_index_item.scss
@@ -34,11 +34,14 @@
 }
 
 .event_item_image_container {
-  height: 120px;
-  box-sizing: border-box;
-  display: flex;
-  // justify-content: center;
-  // width: 100%;
+  // height: 120px;
+  // box-sizing: border-box;
+  // display: flex; 
+  // max-width: 100%;
+  -webkit-box-flex: 0; 
+  flex: 0 0 auto;
+  position: relative;
+  overflow: visible;
 }
 
 .event_item_image_container > img {
